# aws-iam-protected-api-gateways

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: target_architecture.drawio
src/backend/: lambda.py
src/client/: cli_client.py
src/client/utils/: request_signer.py
src/infrastructure/cdk/: cdk-infrastructure.py  cdk.json
src/infrastructure/cloudformation/: template.yaml
